--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,33 @@
 body {
     font-family: "Azeret Mono", monospace;
 }
+.nav-bar-section {
+    /* border: 2px solid slateblue; */
+    width: 100%;
+    height: 100px;
+}
+.nav-bar {
+    /* border: 2px solid orange; */
+    max-width: 1320px;
+    height: 100px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.nav-bar > ul button {
+    border-radius: 8px;
+    padding: 17px 24px;
+    justify-content: center;
+    align-items: center;
+    background: #FFF;
+    color: #0D1321;
+    text-align: center;
+    font-size: 16px;
+    font-family: "Azeret Mono", monospace;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    opacity: 0.8;
+    cursor: pointer;
+}
