--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,8 @@
 body {
     font-family: "Azeret Mono", monospace;
 }
+
+/* Nav-Bar Section Starts */
 .nav-bar-section {
     /* border: 2px solid slateblue; */
     width: 100%;
@@ -15,16 +17,20 @@ body {
 }
 .nav-bar {
     /* border: 2px solid orange; */
-    max-width: 1320px;
+    max-width: 1380px;
     height: 100px;
     margin: 0 auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
+.nav-bar h2 {
+    margin-right: 30px;
+}
 .nav-bar > ul button {
     border-radius: 8px;
-    padding: 17px 24px;
+    padding: 16px 24px;
+    margin-left: 80px;
     justify-content: center;
     align-items: center;
     background: #FFF;
@@ -38,3 +44,65 @@ body {
     opacity: 0.8;
     cursor: pointer;
 }
+/* Nav-Bar Section Ends  */
+
+/* Banner Container Section Starts  */
+.banner-container-section {
+    /* border: 2px solid red; */
+    width: 100%;
+    height: 600px;
+}
+.banner-container {
+    /* border: 2px solid blueviolet; */
+    max-width: 1490px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    background-image: url('/images/Hero-bg.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: darken rgba(211, 211, 211, 0);
+}
+.banner-container img {
+    margin-bottom: 20px;
+}
+.banner-heading {
+    color: #0D1321;
+    text-align: center;
+    font-family: "Azeret Mono", monospace;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 50px; /* 141.667% */
+    margin-bottom: 20px;
+}
+.banner-text {
+    color: #0D1321;
+    text-align: center;
+    font-family: "Azeret Mono", monospace;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 162.5% */
+    margin-bottom: 30px;
+}
+.btn {
+    display: inline-block;
+    padding: 16px 24px;
+    text-decoration: none;
+    font-size: 16px;
+    color: white;
+    border-radius: 8px;
+    background: #0D1321;
+    text-align: center;
+    /* transition: 0.3s; */
+    cursor: pointer;
+}
+/* .btn :hover {
+    background-color: rgba(0, 0, 255, 0.678) ;
+} */
+ /* Banner-Container-Section Ends */
