--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    background-image: url('/images/Hero-bg.png');
+    background-image: url('../images/Hero-bg.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -106,3 +106,38 @@ body {
     background-color: rgba(0, 0, 255, 0.678) ;
 } */
  /* Banner-Container-Section Ends */
+
+ /* Web Development Section Starts  */
+ .web-dev-section {
+     border: 2px solid red;
+     width: 100%;
+     height: 900px;
+     margin-top: 70px;
+ }
+ .web-dev-container {
+    border: 2px solid slateblue;
+    max-width: 1300px;
+    height: 900px;
+    margin: 0 auto;
+    padding-top: 60px;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+ }
+ .web-heading {
+    color: #0D1321;
+    text-align: center;
+    font-family: "Azeret Mono", monospace;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 20px;
+ }
+ .web-dev-contents {
+    border: 2px solid salmon;
+    max-width: 1000px;
+    height: 400px;
+    margin: 0 auto;
+    border-radius: 16px;
+    background: linear-gradient(90deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
+ }
