--- a/styles/style.css
+++ b/styles/style.css
@@ -109,15 +109,15 @@ body {
 
  /* Web Development Section Starts  */
  .web-dev-section {
-     border: 2px solid red;
+     /* border: 2px solid red; */
      width: 100%;
-     height: 900px;
-     margin-top: 70px;
+     height: auto;
+     padding-top: 70px;
  }
  .web-dev-container {
-    border: 2px solid slateblue;
+    /* border: 2px solid green; */
     max-width: 1300px;
-    height: 900px;
+    height: auto;
     margin: 0 auto;
     padding-top: 60px;
     border-radius: 16px;
@@ -134,10 +134,76 @@ body {
     margin-bottom: 20px;
  }
  .web-dev-contents {
-    border: 2px solid salmon;
-    max-width: 1000px;
-    height: 400px;
+    /* border: 2px solid salmon; */
+    max-width: 850px;
+    height: 350px;
     margin: 0 auto;
     border-radius: 16px;
     background: linear-gradient(90deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+ }
+ .web-dev-contents-text{
+    /* border: 2px solid rebeccapurple; */
+    width: 60%;
+    margin-left: 55px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+ }
+ .web-title {
+    color: rgba(13, 19, 33, 0.70);
+    font-family: "Azeret Mono", monospace;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px; /* 150% */
+    padding-bottom: 30px;
+ }
+ .web-text {
+    color: #0D1321;
+    font-family: "Azeret Mono", monospace;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 162.5% */
+ }
+ .web-img-container {
+    /* border: 2px solid peru; */
+    width: 40%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+ .web-img-container img {
+   
+ }
+ .btn-container {
+    margin-top: 25px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+ }
+ .btn-container button {
+    padding: 10px 15px;
+    color: #0D1321;
+    text-align: center;
+    font-family: "Azeret Mono", monospace;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border: 1px solid #0D1321;
+    cursor: pointer;
+    opacity: 0.7;
+ }
+ 
+
+
+
+
+ footer {
+    margin-top: 100px;
  }
