--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ body {
     font-size: 30px;
 }
 
-.nav-bar>ul button {
+.nav-bar >ul button {
     border-radius: 8px;
     padding: 16px 24px;
     margin-left: 80px;
@@ -49,7 +49,6 @@ body {
     opacity: 0.8;
     cursor: pointer;
 }
-
 /* Nav-Bar Section Ends  */
 
 /* Banner Container Section Starts  */
@@ -74,11 +73,9 @@ body {
     background-size: cover;
     background-blend-mode: darken rgba(211, 211, 211, 0);
 }
-
 .banner-container img {
     margin-bottom: 20px;
 }
-
 .banner-heading {
     color: #0D1321;
     text-align: center;
@@ -89,7 +86,6 @@ body {
     line-height: 50px;
     margin-bottom: 20px;
 }
-
 .banner-text {
     color: #0D1321;
     text-align: center;
@@ -100,7 +96,6 @@ body {
     line-height: 26px;
     margin-bottom: 30px;
 }
-
 .btn {
     display: inline-block;
     padding: 16px 24px;
@@ -110,13 +105,11 @@ body {
     border-radius: 8px;
     background: #0D1321;
     text-align: center;
-    /* transition: 0.3s; */
     cursor: pointer;
 }
-
-/* .btn :hover {
-    background-color: rgba(0, 0, 255, 0.678) ;
-} */
+.btn:hover {
+    opacity: 0.7;
+}
 /* Banner-Container-Section Ends */
 
 /* Web Development Section Starts  */
@@ -126,7 +119,6 @@ body {
     height: auto;
     padding-top: 70px;
 }
-
 .web-dev-container {
     /* border: 2px solid green; */
     max-width: 1300px;
@@ -136,7 +128,6 @@ body {
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.02);
 }
-
 .web-heading {
     color: #0D1321;
     text-align: center;
@@ -147,7 +138,6 @@ body {
     line-height: normal;
     margin-bottom: 20px;
 }
-
 .web-dev-contents {
     /* border: 2px solid salmon; */
     max-width: 850px;
@@ -159,7 +149,6 @@ body {
     justify-content: space-evenly;
     align-items: center;
 }
-
 .web-dev-contents-text {
     /* border: 2px solid rebeccapurple; */
     width: 60%;
@@ -168,7 +157,6 @@ body {
     flex-direction: column;
     justify-content: flex-start;
 }
-
 .web-title {
     color: rgba(13, 19, 33, 0.70);
     font-family: "Azeret Mono", monospace;
@@ -178,7 +166,6 @@ body {
     line-height: 36px;
     padding-bottom: 30px;
 }
-
 .web-text {
     color: #0D1321;
     font-family: "Azeret Mono", monospace;
@@ -186,9 +173,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
-   
 }
-
 .web-img-container {
     /* border: 2px solid peru; */
     width: 40%;
@@ -197,18 +182,15 @@ body {
     justify-content: center;
     align-items: center;
 }
-
 .web-img-container img {
     width: 70%;
 }
-
 .btn-container {
     margin-top: 25px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
-
 .btn-container button {
     padding: 10px 15px;
     color: #0D1321;
@@ -233,14 +215,12 @@ body {
     padding-top: 70px;
     margin-top: 70px;
 }
-
 .my-inspiration-container {
     /* border: 2px solid peru; */
     max-width: 1300px;
     height: auto;
     margin: 0 auto;
 }
-
 .my-inspiration-container h2 {
     color: #0D1321;
     text-align: center;
@@ -251,7 +231,6 @@ body {
     line-height: normal;
     margin-bottom: 20px;
 }
-
 .video-container {
     padding-top: 5px;
     margin: 0 auto;
@@ -259,7 +238,6 @@ body {
     justify-content: center;
     align-items: center;
 }
-
 .video-content {
     border: 1px solid rgba(13, 19, 33, 0.20);
     width: 1300px;
@@ -270,7 +248,6 @@ body {
     align-items: center;
     border-radius: 16px;
 }
-
 .video-container iframe {
     width: 95%;
     height: 95%;
@@ -335,7 +312,6 @@ body {
     font-weight: 400;
     line-height: 26px;
 }
-
 .current-card-content a {
     color: #0D1321;
     font-family: "Azeret Mono", monospace;
@@ -344,6 +320,9 @@ body {
     font-weight: 700;
     line-height: normal;
     text-decoration-line: underline;
+}
+.current-card-content a:hover {
+    opacity: 0.7;
 }
 /* My Current Target Section Ends  */
 
@@ -361,7 +340,7 @@ body {
     margin: 0 auto;
     padding-top: 70px;
     border-radius: 8px;
-    background-image: url('../images/handshake.jpg');
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%),linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), url('../images/handshake.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -404,10 +383,51 @@ body {
     align-items: center;
     color: #0D1321;
     text-align: center;
-    font-family: "Azeret Mono";
+    font-family: "Azeret Mono", monospace;
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+    cursor: pointer;
 }
 /* Support Section Ends  */
+
+/* Footer Starts  */
+#footer {
+     /* border: 2px solid red; */
+     margin-top: 70px;
+     width: 100%;
+     height: auto;
+}
+.footer-container {
+    /* border: 2px solid saddlebrown; */
+    max-width: 1490px;
+    height: 10%;
+    margin: 0 auto;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.03);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.footer-container h2 {
+    color: #0D1321;
+    text-align: center;
+    font-family: "Azeret Mono", monospace;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+.social-media a {
+    margin-left: 30px;
+    text-decoration: none;
+}
+.social-media img {
+    width: 30px;
+    height: 30px;
+}
+.social-media a img:hover {
+    opacity: 0.7;
+}
+/* Footer Section Ends  */
